[package]
name = "kepler"
version = "0.1.0"
authors = ["Brandon Dyer <BrandonDyer64@gmail.com>"]
license = "MIT"
homepage = "https://keplerengine.com"
repository = "https://github.com/BrokenLamp/Kepler"
edition = "2018"

[features]
default = []
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl", "gfx-backend-gl/glutin"]
wgl = ["gfx-backend-gl", "gfx-backend-gl/wgl"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

[dependencies]
env_logger = "0.7.1"
gfx-backend-empty = "0.5.0"
gfx-hal = "0.5.0"
image = "0.21"
quaternion = "0.4.1"
shaderc = "0.6.2"
specs = "0.16.1"
winit = { version = "0.22.0", features = ["web-sys"] }

[dependencies.gfx-backend-vulkan]
version = "0.5.2"
features = ["x11"]
optional = true

[dependencies.gfx-backend-gl]
version = "0.5.0"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
version = "0.5.0"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.5.0"
optional = true

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
version = "0.5.1"
optional = true
